--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bufbuild/connect": "^0.8.6",
+    "@bufbuild/connect-web": "^0.8.6",
+    "@bufbuild/protobuf": "^1.2.0",
     "@tremor/react": "^2.4.1",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
@@ -18,12 +21,23 @@
     "daisyui": "^2.51.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "immer": "^10.0.2",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-json-editor-ajrm": "^2.5.14",
+    "react-select": "^5.7.3",
+    "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "use-immer": "^0.9.0"
+  },
+  "devDependencies": {
+    "@bufbuild/buf": "1.18.0-1",
+    "@bufbuild/protoc-gen-connect-es": "^0.8.6",
+    "@bufbuild/protoc-gen-es": "^1.2.0",
+    "@types/react-json-editor-ajrm": "^2.5.3"
   }
 }
