--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-json-editor-ajrm": "^2.5.14",
     "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
+    "reactflow": "^11.7.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@bufbuild/buf": "1.18.0-1",
