--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "@bufbuild/connect": "^0.8.6",
     "@bufbuild/connect-web": "^0.8.6",
     "@bufbuild/protobuf": "^1.2.0",
+    "@emotion/react": "^11.11.0",
+    "@mantine/core": "^6.0.11",
+    "@mantine/hooks": "^6.0.11",
+    "@mapbox/tilebelt": "^1.0.2",
+    "@tanstack/react-query": "^4.29.7",
+    "@tanstack/react-query-devtools": "^4.29.7",
     "@tremor/react": "^2.4.1",
+    "@turf/turf": "^6.5.0",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -22,12 +29,16 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "immer": "^10.0.2",
+    "mapbox-gl": "^2.15.0",
+    "maplibre-gl": "^3.0.1",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-json-editor-ajrm": "^2.5.14",
+    "react-map-gl": "^7.0.25",
+    "react-mapbox-gl": "^5.1.1",
     "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
     "reactflow": "^11.7.2",
