--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@bufbuild/protobuf": "^1.2.0",
     "@emotion/react": "^11.11.0",
     "@mantine/core": "^6.0.11",
+    "@mantine/form": "^6.0.13",
     "@mantine/hooks": "^6.0.11",
     "@mapbox/tilebelt": "^1.0.2",
     "@tanstack/react-query": "^4.29.7",
@@ -24,6 +25,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "clsx": "^1.2.1",
     "daisyui": "^2.51.6",
     "eslint": "8.40.0",
@@ -42,6 +44,7 @@
     "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
     "reactflow": "^11.7.2",
+    "socket.io-client": "^4.6.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "use-immer": "^0.9.0",
