--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^6.0.11",
     "@mantine/form": "^6.0.13",
     "@mantine/hooks": "^6.0.11",
+    "@mantine/notifications": "^6.0.17",
     "@mapbox/tilebelt": "^1.0.2",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-query-devtools": "^4.29.7",
